fix(component): fix layout issue on profile component

--- a/components/hero/hero.module.scss
+++ b/components/hero/hero.module.scss
@@ -80,7 +80,7 @@
   }
 
   &__bio {
-    width: 75ch;
+    width: 60ch;
     margin-bottom: 56px;
 
     @include text(body2);
